fix(java17): apply pattern matching and Stream.toList()